--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.0.5",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
+    "react-native": "^0.73.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
