--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "native-base": "^3.4.28",
@@ -19,10 +21,13 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-input-auto-focus": "^1.0.2",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
